--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="ecom.css">
+    <title>Que Chido Snacks</title>
 </head>
 <body>
+ 
+    <section id = "header">
+    <a href="#"><img src="images/logo-transparent-png.png" class ="logo" alt=""></a>
+     </section>
     
+     <div class = "carousel">
+     <div class = "carousel__item carousel__item--visible">
+     <img src="images/crevel-20323.jpeg"/>
+     </div>
+     <div class ="carousel__item">
+    <img src="images/ada94631-2d2d-4c2e-866e-ddd4117fe3a4.366cb37ce0f83642d67890a1929b542d.webp"/>
+      </div>
+     <div class = "carousel__item">
+        <img src="images/chamoy-covered-gummy-bears.jpeg"/>
+        </div>
+        <div class ="carousel__actions">
+         <button id ="carousel__button--prev" aria-label="Previus slide"><</button>
+         <button id ="carousel__button--next" aria-label="Next slide">></button>
+        </div>
+       </div>
+       <script src="ecom.js"></script>
+       
+
+   <div>
+<ul id = "navbar">
+<li><a href=index.html>Home</a></li>
+<li><a href="product.html">Product</a></li>
+<li><a href="contact.html">Contact</a><li>
+</ul>
+   </div>
 </body>
 </html>
