--- a/index.html
+++ b/index.html
@@ -5,38 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ecom.css">
+    <script src="https://kit.fontawesome.com/f21267e516.js" crossorigin="anonymous"></script>
+</head>
     <title>Que Chido Snacks</title>
 </head>
 <body>
- 
-    <section id = "header">
-    <a href="#"><img src="images/logo-transparent-png.png" class ="logo" alt=""></a>
-     </section>
+    <!-- nav bar  -->
+    <nav class="navbar">
+    <img class ="logo" src="./images/logo-transparent-png.png">
+        <li><a href=index.html>Home</a></li>
+        <li><a href="product.html">Product</a></li>
+        <li><a href="contact.html">Contact</a><li>
+        </ul>
+    </nav>
+    <main>
+<section class="imagecontainer">
+        <img name = "slide" width="250"  height="175" class="imageslide"/>
+    </section>
+    </main>
     
-     <div class = "carousel">
-     <div class = "carousel__item carousel__item--visible">
-     <img src="images/crevel-20323.jpeg"/>
-     </div>
-     <div class ="carousel__item">
-    <img src="images/ada94631-2d2d-4c2e-866e-ddd4117fe3a4.366cb37ce0f83642d67890a1929b542d.webp"/>
-      </div>
-     <div class = "carousel__item">
-        <img src="images/chamoy-covered-gummy-bears.jpeg"/>
-        </div>
-        <div class ="carousel__actions">
-         <button id ="carousel__button--prev" aria-label="Previus slide"><</button>
-         <button id ="carousel__button--next" aria-label="Next slide">></button>
-        </div>
-       </div>
-       <script src="ecom.js"></script>
-       
 
-   <div>
-<ul id = "navbar">
-<li><a href=index.html>Home</a></li>
-<li><a href="product.html">Product</a></li>
-<li><a href="contact.html">Contact</a><li>
-</ul>
-   </div>
+        <footer class="footer">
+    <p class="footerTag"><a target="_blank" href="https://www.facebook.com/" aria-label="Our Facebook Page"><i class="fa-brands fa-facebook fa-2x"></i></a></p>
+    <p class="footerTag"><a target="_blank" href="https://twitter.com/" aria-label="Our Twitter Page"><i class="fa-brands fa-twitter fa-2x"></i></a></p>
+    <p class="footerTag"><a target="_blank" href="https://www.instagram.com/" aria-label="Our Instagram Page"><i class="fa-brands fa-instagram fa-2x"></i></a>
+    </p>
+  </footer>
+      <script src="ecom.js"></script>
+
 </body>
 </html>
