--- a/product.html
+++ b/product.html
@@ -5,9 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ecom.css">
+    <script src="https://kit.fontawesome.com/f21267e516.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="index.js"></script>
+
     <title>Document</title>
 </head>
 <body>
+    <nav class="navbar">
+        <img class ="logo" src="./images/logo-transparent-png.png">
+            <li><a href=index.html>Home</a></li>
+            <li><a href="product.html">Product</a></li>
+            <li><a href="contact.html">Contact</a><li>
+            </ul>
+        </nav>
+
+
+    <div class = "products"></div>
+
+       <footer class="footer">
+        <p class="footerTag"><a target="_blank" href="https://www.facebook.com/" aria-label="Our Facebook Page"><i class="fa-brands fa-facebook fa-2x"></i></a></p>
+        <p class="footerTag"><a target="_blank" href="https://twitter.com/" aria-label="Our Twitter Page"><i class="fa-brands fa-twitter fa-2x"></i></a></p>
+        <p class="footerTag"><a target="_blank" href="https://www.instagram.com/" aria-label="Our Instagram Page"><i class="fa-brands fa-instagram fa-2x"></i></a>
+        </p>
+      </footer>
     
 </body>
 </html>
